--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.1.10",
     "mitt": "^3.0.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
