--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,5 +3,11 @@
   "references": [
     { "path": "./tsconfig.app.json" },
     { "path": "./tsconfig.node.json" }
-  ]
+  ],
+  "compilerOptions": {
+    "baseUrl": ".", // 设置根目录为当前目录
+    "paths": {
+      "@/*": ["src/*"] // @ 别名指向 src 文件夹
+    }
+  }
 }
