chore: Update auto_get_char_data.yml

--- a/.github/workflows/auto_get_char_data.yml
+++ b/.github/workflows/auto_get_char_data.yml
@@ -34,5 +34,6 @@ jobs:
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
+          git remote set-url origin https://x-access-token:${{ secrets.PAT_TOKEN }}@github.com/${{ github.repository }}.git
           git add .
           git diff --cached --quiet || (git commit -m "自动更新数据脚本运行结果" && git push)
